--- a/proy5/static/gestion/css/styles.css
+++ b/proy5/static/gestion/css/styles.css
@@ -43,3 +43,50 @@ a {
     color: orangered;
 }
 
+.contenedor-productos {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin: 10px 30px;
+}
+
+.productos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
+    border: 2px solid #747474;
+    border-radius: 20px;
+    width: 350px;
+    height: 500px;
+}
+
+.img-producto {
+    width: 100%;
+    border-radius: 20px;
+    max-height: 100%;
+    
+}
+
+.caja-img {
+    display: flex;
+    align-items: center;
+    width: 300px;
+    height: 400px;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+h4 {
+    text-align: center;
+    margin-top: auto;
+}
