--- a/proy5/static/servicios/css/styles.css
+++ b/proy5/static/servicios/css/styles.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;   
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     margin-top: 20px;
     gap: 40px;
@@ -42,4 +43,8 @@
 
 .nombre_categoria:hover {
     color: red;
+}
+
+.hidden {
+    display: none;
 }
