--- a/proy5/static/gestion/css/footer.css
+++ b/proy5/static/gestion/css/footer.css
@@ -7,6 +7,6 @@ footer {
     position: absolute;
     bottom: 0;
     color: #fff;
-    padding: 15px;
+    padding: 15px 0;
     font-size: 20px;
 }
