--- a/proy5/templates/gestion/base.html
+++ b/proy5/templates/gestion/base.html
@@ -5,8 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'gestion/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'gestion/css/contacto.css' %}">
+    <link rel="stylesheet" href="{% static 'gestion/css/carrito.css' %}">
     <link rel="stylesheet" href="{% static 'servicios/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'servicios/img/tienda.jpg' %}">
     <title>{% block title %} {%endblock%}</title>
@@ -14,7 +20,7 @@
 
 <body>
     {% include 'gestion/superior/barra.html' %}
-        
+
     {% block content %} {% endblock %}
 
     {% include 'gestion/superior/footer.html' %}
