--- a/proy5/templates/gestion/superior/barra.html
+++ b/proy5/templates/gestion/superior/barra.html
@@ -1,22 +1,72 @@
 <!DOCTYPE html>
 {%load static%}
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="{% static 'gestion/css/styles.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'gestion/css/barra.css' %}">
 </head>
+
 <body>
-    <nav class="barra">
-        <a href="{% url 'home' %}"><img src="{% static 'gestion/img/logoB.png' %}" alt="" class="logo"></a>
-        <ul>
-            <li><a href="{% url 'home' %}" class="{% if request.path == '/' %}active{%endif%}">Home</a></li>
-            <li><a href="{% url 'servicios' %}" class="{% if request.path == '/servicios' %}active{%endif%}">Servicios</a></li>
-            <li><a href="{% url 'tienda' %}" class="{% if request.path == '/tienda' %}active{%endif%}">Tienda</a></li>
-            <li><a href="{% url 'blog' %}" class="{% if request.path == '/blog' %}active{%endif%}">Blog</a></li>
-            <li><a href="{% url 'contacto' %}" class="{% if request.path == '/contacto' %}active{%endif%}">Contacto</a></li>
-        </ul>
-        <div class="admin">
-            <a href="/admin">Admin</a>
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid alcentro">
+            <a href="{% url 'home' %}"><img src="{% static 'gestion/img/logoB.png' %}" alt="" class="logo"></a>
+            <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a href="{% url 'home' %}"
+                            class="nav-link {% if request.path == '/' %}active{%endif%}">Home</a>
+                    <a href="{% url 'servicios' %}"
+                            class="nav-link {% if request.path == '/servicios' %}active{%endif%}">Servicios</a>
+                    <a href="{% url 'tienda' %}"
+                            class="nav-link {% if request.path == '/tienda' %}active{%endif%}">Tienda</a>
+                    <a href="{% url 'blog' %}"
+                            class="nav-link {% if request.path == '/blog' %}active{%endif%}">Blog</a>
+                    <a href="{% url 'contacto' %}"
+                            class="nav-link {% if request.path == '/contacto' %}active{%endif%}">Contacto</a>
+                </div>
+            </div>
         </div>
     </nav>
+
+    <!-- <nav class="navbar navbar-expand-md bg-dark navbar-dark nav-center contenedor">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="">
+            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="links navbar-nav me-auto mb-2 mb-lg-0">
+                </ul>
+            </div>
+        </div>
+    </nav> -->
+    <!-- <header class="header">
+        <a href="{% url 'home' %}"><img src="{% static 'gestion/img/logoB.png' %}" alt="" class="logo"></a>
+        <nav class="nav">
+            <ul class="main-menu" id="main-menu">
+                <li><a href="{% url 'home' %}" class="{% if request.path == '/' %}active{%endif%}">Home</a></li>
+                <li><a href="{% url 'servicios' %}" class="{% if request.path == '/servicios' %}active{%endif%}">Servicios</a></li>
+                <li><a href="{% url 'tienda' %}" class="{% if request.path == '/tienda' %}active{%endif%}">Tienda</a></li>
+                <li><a href="{% url 'blog' %}" class="{% if request.path == '/blog' %}active{%endif%}">Blog</a></li>
+                <li><a href="{% url 'contacto' %}" class="{% if request.path == '/contacto' %}active{%endif%}">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div id="toggle-menu" class="toggle-menu">
+        <img src="../../../../media/icon-barra-blanco.png" alt="" class="icon-barra">
+    </div> -->
 </body>
+
 </html>
